[package]
name = "restless"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Patrick M. Elsen <pelsen@xfbs.net>"]
documentation = "https://docs.rs/restless"
description = "REST API helper traits"
repository = "https://github.com/xfbs/restless"

[dependencies]
restless-core = { workspace = true }
restless-data = { workspace = true }
restless-query = { workspace = true }
restless-hyper = { workspace = true, optional = true }
restless-axum = { workspace = true, optional = true }
restless-gloo = { workspace = true, optional = true }
restless-yew = { workspace = true, optional = true }
restless-wasm-cache = { workspace = true, optional = true }

[features]
default = ["bytes", "json"]
json = ["restless-data/json"]
bytes = ["restless-core/bytes", "restless-data/bytes"]
postcard = ["restless-data/postcard"]
bincode = ["restless-data/bincode"]
yaml = ["restless-data/yaml"]
urlencoded = ["restless-query/urlencoded"]
qs = ["restless-query/qs"]
gloo = ["dep:restless-gloo"]
yew = ["dep:restless-yew"]
wasm-cache = ["dep:restless-wasm-cache"]
reqwest = []
http = ["restless-core/http"]
hyper = ["dep:restless-hyper"]
axum = ["dep:restless-axum"]
full = ["json", "bytes", "postcard", "bincode", "yaml", "urlencoded", "qs", "gloo", "yew", "reqwest", "http", "hyper", "axum"]

[package.metadata.docs.rs]
features = ["full"]

[workspace]
resolver = "2"
members = [ "clients/*", "core", "data", "query"]

[workspace.dependencies]
restless-core = { path = "./core", version = "0.1.0" }
restless-data = { path = "./data", version = "0.1.0" }
restless-query = { path = "./query", version = "0.1.0" }
restless-hyper = { path = "./clients/hyper", version = "0.1.0" }
restless-axum = { path = "./clients/axum", version = "0.1.0" }
restless-gloo = { path = "./clients/gloo", version = "0.1.0" }
restless-yew = { path = "./clients/yew", version = "0.1.0" }
restless-wasm-cache = { path = "./clients/wasm-cache", version = "0.1.0" }
thiserror = "1.0.57"
async-trait = "0.1.77"
serde = "1.0.197"
