[package]
name = "restless-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.5.0", optional = true }
http = { version = "0.2.9", optional = true }
thiserror.workspace = true

[features]
bytes = ["dep:bytes"]
http = ["dep:http"]

[package.metadata.docs.rs]
features = ["bytes"]
