[package]
name = "restless-core"
version = "0.1.0"
description = "Core traits for restless, a crate which allows you to express HTTP requests using the Rust trait system."
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
metadata.workspace = true

[dependencies]
bytes = { version = "1.5.0", optional = true }
http = { version = "0.2.9", optional = true }
thiserror.workspace = true

[features]
bytes = ["dep:bytes"]
http = ["dep:http"]
full = ["bytes", "http"]

[package.metadata.docs.rs]
features = ["full"]
