[package]
name = "restless-data"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "1.3.3", optional = true }
bytes = { version = "1.5.0", optional = true }
postcard = { version = "1.0.8", features = ["alloc"], optional = true }
restless-core.workspace = true
serde = { version = "1.0.197", optional = true }
serde_json = { version = "1.0.114", optional = true }
serde_yaml = { version = "0.9.32", optional = true }

[features]
bytes = ["dep:bytes", "restless-core/bytes"]
json = ["dep:serde_json", "dep:serde"]
postcard = ["dep:postcard", "dep:serde"]
bincode = ["dep:bincode", "dep:serde"]
yaml = ["dep:serde_yaml", "dep:serde"]
