[package]
name = "restless-query"
version = "0.1.0"
edition = "2021"

[dependencies]
restless-core.workspace = true
serde = { workspace = true, optional = true }
serde_qs = { version = "0.12.0", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }

[features]
qs = ["dep:serde", "dep:serde_qs"]
urlencoded = ["dep:serde", "dep:serde_urlencoded"]
