[package]
name = "restless-util"
version = "0.1.0"
description = "Utility traits for working with restless"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
metadata.workspace = true

[dependencies]
restless-core.workspace = true
