[package]
name = "restless-axum"
version = "0.1.0"
description = "Axum integration for restless"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.6.20" }
restless-core.workspace = true
restless-hyper.workspace = true
thiserror.workspace = true
tower = "0.4.13"
