[package]
name = "restless-gloo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.77"
gloo-net = { version = "0.3.1" }
restless-core = { workspace = true, features = ["http"] }
restless-data = { workspace = true, features = ["json"] }
serde.workspace = true
thiserror.workspace = true
