[package]
name = "restless-hyper"
version = "0.1.0"
description = "Hyper integration for restless"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
metadata.workspace = true

[dependencies]
http = "0.2.9"
hyper = "0.14.27"
restless-core = { workspace = true, features = ["http", "bytes"] }
thiserror.workspace = true
