[package]
name = "restless-wasm-cache"
version = "0.1.0"
description = "Wasm-Cache integration for restless"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.77"
restless-gloo.workspace = true
wasm-cache = { version = "0.2.1" }
