[package]
name = "restless-wasm-cache"
version = "0.1.0"
description = "Wasm-Cache integration for restless"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
metadata.workspace = true

[dependencies]
async-trait.workspace = true
restless-gloo.workspace = true
wasm-cache = { version = "0.2.1" }
