[package]
name = "restless-yew"
version = "0.1.0"
description = "Yew integration for restless"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
metadata.workspace = true

[dependencies]
restless-gloo.workspace = true
yew = "0.20.0"
yew-hooks = "0.2.0"
